add archive note container

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <search-note></search-note>
     <form-input></form-input>
     <note-list></note-list>
+    <archive-note></archive-note>
     
   </main>
   <script type="module" src="script/main/main.js"></script>
