implementation loading indicator

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <app-bar></app-bar>
   </header>
   <main>
-      
     <search-note></search-note>
     <form-input></form-input>
     <note-list></note-list>
     <archive-note></archive-note>
+    <loading-indicator hidden></loading-indicator>
     
   </main>
   <script type="module" src="script/main/main.js"></script>
